add database api and schema api
